--- a/packages/react-scripts/package.json
+++ b/packages/react-scripts/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "react-scripts",
-  "version": "3.4.1",
-  "description": "Configuration and scripts for Create React App.",
+  "name": "enorm-kevin-react-scripts",
+  "version": "3.4.2",
+  "description": "Custom configuration for CRA is awesome",
+  "author": "kevin.vugts@enorm.com",
   "repository": {
     "type": "git",
-    "url": "https://github.com/facebook/create-react-app.git",
+    "url": "https://github.com/kevinvugts/create-react-app.git",
     "directory": "packages/react-scripts"
   },
   "license": "MIT",
@@ -12,7 +13,7 @@
     "node": ">=8.10"
   },
   "bugs": {
-    "url": "https://github.com/facebook/create-react-app/issues"
+    "url": "https://github.com/kevinvugts/create-react-app/issues"
   },
   "files": [
     "bin",
